tests/paczka1/fuzzy1/88878392.err
Error in line 3: 7BYTHZr S847 88,9
Error in line 8: 0SP3RMll4 A852 79,5
Error in line 17: 7BYTHZr S847 0,1
Error in line 27: VVQMBF2OpF A852 27,6
